docs: fix missing env variables

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ MODAL_TOKEN_SECRET=
 # Keys for notebook development
 HF_TOKEN=
 
-# Usernames used for Makefile, GitHub Actions (act), and documentation
+# Usernames used for Makefile and GitHub Actions (act)
 DOCKER_USERNAME=
 HF_USERNAME=
 
