--- a/.github/workflows/deploy-mkdocs.yml
+++ b/.github/workflows/deploy-mkdocs.yml
@@ -7,22 +7,10 @@ on:
         description: 'Type "deploy" to confirm deployment'
         required: true
         default: ''
-  workflow_call:
-    inputs:
-      confirm_deployment:
-        description: 'Type "deploy" to confirm deployment'
-        type: string
-        required: true
 
 jobs:
-  setup:
-    uses: ./.github/workflows/deploy-setup.yml
-    with:
-      confirm_deployment: ${{ inputs.confirm_deployment }}
-    secrets: inherit
-
   deploy_mkdocs:
-    needs: setup
+    if: inputs.confirm_deployment == 'deploy'
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -35,31 +23,19 @@ jobs:
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
           
-      - name: Setup Python
-        uses: actions/setup-python@v4
+      - name: Setup uv
+        uses: astral-sh/setup-uv@v4
         with:
-          python-version: 3.x
+          enable-cache: true
           
-      - name: Cache MkDocs dependencies
-        uses: actions/cache@v4
-        with:
-          key: mkdocs-material-${{ github.run_id }}
-          path: .cache
-          restore-keys: |
-            mkdocs-material-
-              
       - name: Install MkDocs and dependencies
         run: |
-          pip install mkdocs-material python-dotenv mkdocs-macros-plugin mkdocs-glightbox
+          uv pip install --system mkdocs-material mkdocs-macros-plugin mkdocs-glightbox
           
       - name: Deploy MkDocs to GitHub Pages
         run: mkdocs gh-deploy --force
         
-  mkdocs_summary:
-    needs: [setup, deploy_mkdocs]
-    runs-on: ubuntu-latest
-    steps:
       - name: Summary
         run: |
-          echo "Successfully deployed documentation for ${{ needs.setup.outputs.project_name }} ${{ needs.setup.outputs.version }}"
-          echo "- Documentation: https://$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]').github.io/$(echo ${{ github.event.repository.name }} | tr '[:upper:]' '[:lower:]')/"
+          echo "✅ Successfully deployed documentation"
+          echo "📖 Documentation: https://$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]').github.io/$(echo ${{ github.event.repository.name }} | tr '[:upper:]' '[:lower:]')/"
