--- a/.github/workflows/deploy-mkdocs.yml
+++ b/.github/workflows/deploy-mkdocs.yml
@@ -23,14 +23,27 @@ jobs:
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
           
-      - name: Setup uv
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.x
+          
+      - name: Install uv
         uses: astral-sh/setup-uv@v4
         with:
-          enable-cache: true
-          
+          version: "latest"
+      
+      - name: Cache MkDocs dependencies
+        uses: actions/cache@v4
+        with:
+          key: mkdocs-material-${{ github.run_id }}
+          path: .cache
+          restore-keys: |
+            mkdocs-material-
+              
       - name: Install MkDocs and dependencies
         run: |
-          uv pip install --system mkdocs-material mkdocs-macros-plugin mkdocs-glightbox
+          uv pip install --system mkdocs-material python-dotenv mkdocs-macros-plugin mkdocs-glightbox
           
       - name: Deploy MkDocs to GitHub Pages
         run: mkdocs gh-deploy --force
