chore: update docker config and env comments

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,16 @@
-# Keys for main application
+# Main application
 OPENAI_API_KEY=
 MODAL_TOKEN_ID=
 MODAL_TOKEN_SECRET=
 
-# Keys for notebook development
+# Notebooks and local CI/CD (act)
 HF_TOKEN=
 
-# Usernames used for Makefile and GitHub Actions (act)
+# Makefile and Local CI/CD Testing
 DOCKER_USERNAME=
 HF_USERNAME=
 
-# Local CI/CD testing with ACT
+# Local CI/CD Testing with act
 GITHUB_TOKEN=
 GIT_USERNAME=
 GIT_USER_EMAIL=
