--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: Snapr - Documentation Hub
 nav:
   - 🏠 Home: index.md
-  - 📝 Changelog: changelog.md
+  - 📝 Changelog: CHANGELOG.md
   - 🧑‍💻 Functional Documentation:
     - 🔍 Overview: functional/overview.md
     - 🚶‍♀️ User Flow: functional/user-flow.md
