--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -32,8 +32,8 @@ jobs:
 
     - name: Run Ruff checks
       run: |
-        uvx ruff check .
-        uvx ruff format --check .
+        uvx ruff check . --include="*.py"
+        uvx ruff format --check . --include="*.py"
 
   test:
     name: Unit Tests
