--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
 
 [dependency-groups]
 docs = [
+    "mkdocs>=1.6.1",
     "mkdocs-glightbox>=0.4.0",
     "mkdocs-macros-plugin>=1.3.7",
     "mkdocs-material>=9.6.14",
